namespaces.yml
--- # Backend
apiVersion: v1
kind: Namespace
metadata:
  name: backend
--- # Backend
apiVersion: v1
kind: Namespace
metadata:
  name: folio-staging-v1-kafka
