first-pod.yml
### Der erste Pod im Cluster. Nach der Veröffentlichung sollte ein Nginx mit einer Beispielseite auf Port 30000 antworten.
---
apiVersion: v1
kind: Pod
metadata:
  name: my-first-nginx
  labels:
    app: my-nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.23-alpine
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: my-nginx
  ports:
    - protocol: TCP
      nodePort: 30000
      port: 80
      targetPort: 80
