wordpress-deployments.yml
# Beispiel einer Wordpress-Installation mit Frontend und Backend (Datenbank)
# Deployments, Services und Ingress
# 
# Deployment der Datenbank im Backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-database-deployment
  namespace: backend
  labels:
    app: wp-database
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wp-database
  template:
    metadata:
      name: wp-database
      namespace: backend
      labels:
        app: wp-database
    spec:
      volumes:
        - name: volume-wp-db
          persistentVolumeClaim:
            claimName: pvc-wp-db
      containers:
        - name: mariadb
          image: mariadb
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: volume-wp-db
          ports:
            - containerPort: 3306
---
# Ein Service für das Backend. Bringt den Port über TCP von innen nach außen.
apiVersion: v1
kind: Service
metadata:
  name: wp-database
  namespace: backend
spec:
  selector:
    app: wp-database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
# Deployment des Frontends
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-web-deployment
  namespace: frontend
  labels:
    app: wp-web
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  selector:
    matchLabels:
      app: wp-web
  template:
    metadata:
      labels:
        app: wp-web
    spec:
      containers:
        - name: web
          image: wordpress:latest
          ports:
            - containerPort: 80
---
# Ein Service für das Frontend
apiVersion: v1
kind: Service
metadata:
  name: wp-external
  namespace: frontend
spec:
  # type: NodePort #Auskommentieren für den Einsatz mit Traefik
  selector:
    app: wp-web
  ports:
    - protocol: TCP
    # nodePort: 30001 #Auskommentieren für den Einsatz mit Traefik
      port: 80
      targetPort: 80
---
# Ein Ingress für das Frontend
# Kommentierung entfernen für den Einsatz mit Traefik
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-ingress
  namespace: frontend
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: wp-external
          port: 80
